Fix OFX direct connect data encoding.

Write the byte array directly into the file without passing it trough
QTextStream which uses QTextCodec::codecForLocale() to interpret the
data. The encoding is handled by libofx.

BUG: 353372
FIXED-IN: 4.8.0